# moltbook

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_PRAGMATICS.md  REPRODUCIBILITY.md  SECURITY.md  _redirects  ci.yml  mbk.py  pyproject.toml
.github/: pull_request_template.md
paper/: paper.md
reports/: analysis_schema.md  guia_interpretacion_sociologica.md  human_intervention_annotation_guide.md  human_intervention_review.md  human_intervention_robustness.md  human_intervention_strict_events.md  interpretacion_sociologica.md  interpretacion_sociologica_auto.md  paper.md  pragmatics_revision_humana_estado.md  public_report.md  temporal_contract_audit.md
scripts/: aggregate_objectives.py  analyze_transmission_sensitivity.py  analyze_transmission_vsm_baseline.py  annotate_ontology_benchmark.py  build_context_dataset.py  build_intervention_annotation_pack.py  build_intervention_strict_subset.py  build_ontology_benchmark.py  build_public_doc_lookup.py  build_public_pair_tables.py  build_sociology_interpretation.py  check_ui_coherence.js  clean_matches_post_comment.py  derive_signals.py  detect_human_intervention.py  diffusion_metrics.py  embedding_pipeline.py  embedding_post_comment_matches.py  evaluate_ontology_benchmark.py  export_pragmatics_es.py  extract_edges.py  fetch_moltbook_api.py  generate_audit_package.py  intervention_robustness.py  meme_models.py  quant_sociology.py  recompute_ontology_benchmark_predictions.py  repro_check.sh  run_pragmatics_pipeline.sh  sync_site_derived_data.sh  (+1 more)
(+67 files in other folders)
